base/builds/regulus/argocd/projects/hometheatre/manifests/nzbget/deployment-nzbget.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  namespace: nzbget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: nzbget
      app.kubernetes.io/name: nzbget
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nzbget
        app.kubernetes.io/name: nzbget
    spec:
      containers:
      - name: nzbget
        image: lscr.io/linuxserver/nzbget:amd64-version-v26.2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 4Gi
          limits:
            cpu: 4000m
            memory: 6Gi
        ports:
        - containerPort: 6789
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /intermediate
          name: intermediate
        - mountPath: /downloads
          name: downloads
        - mountPath: /config
          name: config
        - mountPath: /exports/radarr
          name: exports-radarr
        - mountPath: /exports/sonarr
          name: exports-sonarr
        - mountPath: /exports/sonarr_anime
          name: exports-sonarranime
      volumes:
      - name: intermediate
        persistentVolumeClaim:          
          claimName: cachedir
      - name: downloads
        persistentVolumeClaim: 
          claimName: downloads
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: exports-sonarr
        persistentVolumeClaim:
          claimName: exports-sonarr
      - name: exports-radarr
        persistentVolumeClaim:
          claimName: exports-radarr
      - name: exports-sonarranime
        persistentVolumeClaim:
          claimName: exports-sonarranime
